Opened 12 years ago

Closed 12 years ago

Last modified 12 years ago

#1042 closed defect (fixed)

Regression causes DV copy to fail

Reported by: llogan Owned by:
Priority: important Component: undetermined
Version: git-master Keywords: dvvideo regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

7b2dba1c50c92c76f147727be7c27872252e29f6 bad
084bd109fcaaddd30d90601aff1f987abebadbfb good

input sample:
http://www.mediafire.com/file/8agcdgs2f9kqlbi/submarine.dv

Does not work.

$ ./ffmpeg -loglevel debug -i ~/vbox/submarine.dv -vcodec copy -acodec copy -y ~/copy.dv
ffmpeg version N-36190-g7b2dba1, Copyright (c) 2000-2011 the FFmpeg developers
  built on Mar  6 2012 17:30:27 with gcc 4.4.5
  configuration: 
  libavutil      51. 33.100 / 51. 33.100
  libavcodec     53. 48.100 / 53. 48.100
  libavformat    53. 28.100 / 53. 28.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 54.100 /  2. 54.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  5.100 /  0.  5.100
[dv @ 0x23777e0] Format dv probed with size=131072 and score=75
[dvvideo @ 0x237db80] err{or,}_recognition separate: 1; 1
[dvvideo @ 0x237db80] err{or,}_recognition combined: 1; 10001
[dvvideo @ 0x237db80] Unsupported bit depth: 0
[pcm_s16le @ 0x237e8a0] err{or,}_recognition separate: 1; 1
[pcm_s16le @ 0x237e8a0] err{or,}_recognition combined: 1; 10001
[dv @ 0x23777e0] All info found
[dv @ 0x23777e0] Estimating duration from bitrate, this may be inaccurate
Input #0, dv, from '/home/lou/vbox/submarine.dv':
  Metadata:
    timecode        : 00:00:00:00
  Duration: 00:00:09.97, start: 0.000000, bitrate: 28771 kb/s
    Stream #0:0, 1, 1001/30000: Video: dvvideo, yuv411p, 720x480, 1001/30000, 28771 kb/s, SAR 8:9 DAR 4:3, 29.97 tbr, 29.97 tbn, 29.97 tbc
    Stream #0:1, 1, 1/30000: Audio: pcm_s16le, 48000 Hz, 2 channels, s16, 1536 kb/s
[dv @ 0x237ed60] Can't initialize DV format!
Make sure that you supply exactly two streams:
     video: 25fps or 29.97fps, audio: 2ch/48kHz/PCM
     (50Mbps allows an optional second audio stream)
Output #0, dv, to '/home/lou/copy.dv':
  Metadata:
    timecode        : 00:00:00:00
    encoder         : Lavf53.28.100
    Stream #0:0, 0, 1/90000: Video: dvvideo, yuv411p, 720x480 [SAR 8:9 DAR 4:3], 1001/30000, q=2-31, 28771 kb/s, 90k tbn, 29.97 tbc
    Stream #0:1, 0, 1/90000: Audio: pcm_s16le, 48000 Hz, 2 channels, 1536 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (copy)
  Stream #0:1 -> #0:1 (copy)
Could not write header for output file #0 (incorrect codec parameters ?)

Works:

$ ./ffmpeg -i ~/vbox/test.dv -vcodec copy -acodec copy -y ~/cut.dv
ffmpeg version N-36189-g084bd10, Copyright (c) 2000-2011 the FFmpeg developers
  built on Mar  6 2012 17:06:32 with gcc 4.4.5
  configuration: 
  libavutil      51. 33.100 / 51. 33.100
  libavcodec     53. 48.100 / 53. 48.100
  libavformat    53. 28.100 / 53. 28.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 54.100 /  2. 54.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  5.100 /  0.  5.100
[dv @ 0x219a7e0] Estimating duration from bitrate, this may be inaccurate
Input #0, dv, from '/home/lou/vbox/test.dv':
  Metadata:
    timecode        : 00:00:00:00
  Duration: 00:00:09.97, start: 0.000000, bitrate: 28771 kb/s
    Stream #0:0: Video: dvvideo, yuv411p, 720x480, 28771 kb/s, SAR 8:9 DAR 4:3, 29.97 tbr, 29.97 tbn, 29.97 tbc
    Stream #0:1: Audio: pcm_s16le, 48000 Hz, 2 channels, s16, 1536 kb/s
Output #0, dv, to '/home/lou/cut.dv':
  Metadata:
    timecode        : 00:00:00:00
    encoder         : Lavf53.28.100
    Stream #0:0: Video: dvvideo, yuv411p, 720x480 [SAR 8:9 DAR 4:3], q=2-31, 28771 kb/s, 90k tbn, 29.97 tbc
    Stream #0:1: Audio: pcm_s16le, 48000 Hz, 2 channels, 1536 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (copy)
  Stream #0:1 -> #0:1 (copy)
Press [q] to stop, [?] for help
frame=  299 fps=  0 q=-1.0 Lsize=   35039kB time=00:00:09.97 bitrate=28771.3kbits/s    
video:35039kB audio:1871kB global headers:0kB muxing overhead -5.068094%

Change History (4)

comment:1 by llogan, 12 years ago

The "works" example should have been using the same sample; submarine.dv, but I pasted the wrong console output, but the result is the same.

comment:2 by Carl Eugen Hoyos, 12 years ago

Keywords: regression added
Reproduced by developer: set
Status: newopen

Related to ticket #44.

comment:3 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: openclosed

fxied locally, will push in a moment

comment:4 by Carl Eugen Hoyos, 12 years ago

Keywords: dvvideo added; dv removed
Note: See TracTickets for help on using tickets.