dv: Fix streamcopy input.

Fixes Ticket1042

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>